DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/components/_page-transition.scss
+++ b/wp-content/themes/denholm/scss/components/_page-transition.scss
@@ -376,6 +376,7 @@
       margin: 0 auto;
       padding: 0;
       height: auto;
+      overflow: hidden;
     }
 
     .nav {
